--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,10 @@
 
 :root {
   /* colores */
-  --fondo-header: rgb(243, 168, 30);
-  --color-header--titulo: #000000;
-  --color-header--parrafo: #414141;
-  --color-background--html: rgb(255, 255, 255);
+  --fondo-header: rgb(0, 0, 0);
+  --color-header--titulo: orange;
+  --color-header--parrafo: orange;
+  --color-background--html: rgb(177, 115, 0);
 }
 
 html {
@@ -22,15 +22,17 @@ html {
 
 header {
   margin: 0 auto;
-  padding: 10px 30px 10px;
+  padding: 25px 85px 25px;
   background-color: var(--fondo-header);
+
 }
 
 header h1 {
   color: var(--color-header--titulo);
-  font-size: 2.6rem;
+  font-size: 2.8rem;
   font-weight: 800;
   line-height: 2rem;
+  padding-top: 1rem;
   padding-bottom: 20px;
 }
 header p {
@@ -40,7 +42,7 @@ header p {
 
 /* MAIN */
 /* SECTION 1 */
-.calculate{
+.calculate {
   width: 100%;
   padding-top: 10px;
   padding-left: calc(50% - 250px);
@@ -49,32 +51,47 @@ header p {
   flex-wrap: wrap;
 }
 
-.main-cards{
+/* cards generales */
+.main-cards {
   margin: 30px 10px;
   width: 100%;
   min-width: 300px;
   max-width: 475px;
   min-height: 220px;
   background-color: rgb(228, 228, 228);
-  box-shadow: -2px 3px 18px 0px rgba(0,0,0,0.61);
+  box-shadow: -2px 3px 18px 0px rgba(0, 0, 0, 0.61);
   padding: 30px;
   border-radius: 10px;
+  border: 6px solid transparent;
 }
 
+/* cards por figuras */
+.card-cuadrado {
+  background-color: rgb(141, 162, 255);
+  border-color: rgb(0, 0, 182);
+}
+.card-circulo {
+  background-color: rgb(253, 135, 135);
 
-.main-cards h2{
+  border-color: rgb(129, 10, 10);
+}
+.card-triangulo {
+  background-color: rgb(251, 251, 175);
+  border-color: rgb(172, 175, 24);
+}
+
+.main-cards h2 {
   color: #303030;
   font-size: 1.8rem;
   position: relative;
   margin-bottom: 20px;
 }
 
-.main-cards label{
+.main-cards label {
   color: #303030;
   font-size: 1.4rem;
 }
-
-form input{
+form input {
   width: 140px;
   padding: 3px;
   border-radius: 3px;
@@ -82,15 +99,15 @@ form input{
   margin: 10px;
   margin-right: 0;
 }
-form .buttons{
+form .buttons {
   background-color: #00000000;
   position: relative;
   margin-top: 10px;
   margin-bottom: 10px;
-} 
+}
 
-button{
+button {
   margin: 5px;
   width: 120px;
-  box-shadow: 0px 2px 1px 0px rgba(0,0,0,0.61);
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.61);
 }
