--- a/styles.css
+++ b/styles.css
@@ -24,7 +24,6 @@ header {
   margin: 0 auto;
   padding: 25px 85px 25px;
   background-color: var(--fondo-header);
-
 }
 
 header h1 {
@@ -89,7 +88,7 @@ header p {
 
 .main-cards label {
   color: #303030;
-  font-size: 1.4rem;
+  font-size: 1.8rem;
 }
 form input {
   width: 140px;
@@ -106,8 +105,45 @@ form .buttons {
   margin-bottom: 10px;
 }
 
+/* Estilos botones */
+
 button {
+  font-weight: 600;
+  padding: 7px;
+  font-size: 1.6rem;
   margin: 5px;
-  width: 120px;
+  max-width: 130px;
+  height: auto;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.61);
+  border: 1px solid transparent;
+  border-radius: 7px;
+}
+/* Estilos de botones por contenedor de figura */
+/* Boton de calcular de card cuadrado */
+.card-cuadrado button {
+  background-color: rgb(0, 0, 116);
+  color: rgb(204, 232, 255);
+}
+.card-cuadrado button:hover {
+  background-color: rgb(0, 0, 255);
+  color: rgb(255, 255, 255);
+}
+/* Boton de calcular de card circulo */
+
+.card-circulo button {
+  background-color: rgb(124, 0, 0);
+  color: rgb(251, 210, 210);
+}
+.card-circulo button:hover {
+  background-color: rgb(255, 12, 12);
+  color: rgb(255, 255, 255);
+}
+/* botones de calcular de card triangulo  */
+.card-triangulo button {
+  background-color: rgb(107, 100, 0);
+  color: rgb(255, 253, 114);
+}
+.card-triangulo button:hover {
+  background-color: rgb(207, 193, 0);
+  color: rgb(255, 255, 255);
 }
